--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,8 +56,11 @@
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">{{content}}</section>
-  </div> 
+        <section id="main_content" class="inner">
+          <span style="position:absolute;right:0;top:0">{{ page.date | date: '%B %d, %Y' }}</span>
+          {{content}}
+        </section>
+    </div> 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
