--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
       }
     </script>
 
-    <title>Developer Adventures{% if page.title %} - {{page.title}}{% endif %}</title>
+    <title>nmcginn.com {% if page.title %} - {{page.title}}{% endif %}</title>
   </head>
 
   <body>
@@ -28,8 +28,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/odstderek/odstderek">View on GitHub</a>
 
-          <h1 id="project_title">Developer Adventures</h1>
-          <h2 id="project_tagline">Random thoughts of a random dev</h2>
+          <h1 id="project_title">nmcginn.com</h1>
+          <h2 id="project_tagline">clever tagline here</h2>
 
           <div class="small-device-nav" onclick="showHideElement('sidebar-small')">
             <img src = "{{ site.github.url }}/images/hamburger.png" />
@@ -64,7 +64,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">nmcginn.com</a></p>
+        <p class="copyright">nmcginn.com © All rights reserverd.</a></p>
       </footer>
     </div>
 
