--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -271,6 +271,12 @@ Full-Width Styles
   margin: 0 auto;
 }
 
+#header_wrap a {
+  color: #fff;
+  font-weight: 700;
+  text-shadow: #111 0px 0px 10px;
+}
+
 #forkme_banner {
   display: block;
   position: absolute;
@@ -279,7 +285,7 @@ Full-Width Styles
   z-index: 10;
   padding: 10px 50px 10px 10px;
   color: #fff;
-  background: url('../images/blacktocat.png') #795da3 no-repeat 95% 50%;
+  background: url('../images/blacktocat.png') rgba(150, 152, 150, 0.5) no-repeat 95% 50%;
   font-weight: 700;
   box-shadow: 0 0 10px rgba(0,0,0,.5);
   border-bottom-left-radius: 2px;
@@ -287,12 +293,10 @@ Full-Width Styles
 }
 
 #header_wrap {
-  background: #212121;
-  background: -moz-linear-gradient(top, #373737, #212121);
-  background: -webkit-linear-gradient(top, #373737, #212121);
-  background: -ms-linear-gradient(top, #373737, #212121);
-  background: -o-linear-gradient(top, #373737, #212121);
-  background: linear-gradient(top, #373737, #212121);
+  background-image: url('../images/panther.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center top;
 }
 
 #header_wrap .inner {
@@ -416,6 +420,10 @@ Small Device Styles
     font-size:14px;
   }
 
+  #sidebar-small {
+    font-size: 1.5em;
+  }
+
   #downloads {
     display: none;
   }
@@ -426,7 +434,7 @@ Small Device Styles
   }
 
   #project_title {
-  font-size: 32px;
+    font-size: 32px;
   }
 
   h1 {
