--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,10 +36,15 @@
           </div>
 
           <div id="sidebar-small" class="inner">
-            {% for post in site.posts %}
-              <div>
-                <a href="{{ post.url | prepend: site.github.url }}">{{ post.title }}</a>
-              </div>
+            {% for category in site.categories reversed %}
+            <div style="color:white;font-weight:700">{{category | first}}</div>
+              {% for posts in category %}
+                {% for post in posts reversed %}
+                  <div style="margin-left:10px">
+                    <a href="{{ post.url | prepend: site.github.url }}">{{ post.title }}</a>
+                  </div>
+                {% endfor %}
+              {% endfor %}
             {% endfor %}
           </div>
 
