--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">nmcginn.com © All rights reserverd.</a></p>
+        <p class="copyright">nmcginn.com © {{ site.time | date: '%Y' }} All rights reserverd.</a></p>
       </footer>
     </div>
 
