--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Docs : Documentation, Onboarding, and Training">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="{{ site.github.url }}/stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/stylesheet.css">
     <script type="text/javascript">
       function showHideElement(id) {
         var nav = document.getElementById(id);
@@ -32,7 +32,7 @@
           <h2 id="project_tagline">clever tagline here</h2>
 
           <div class="small-device-nav" onclick="showHideElement('sidebar-small')">
-            <img src = "{{ site.github.url }}/images/hamburger.png" />
+            <img src = "/images/hamburger.png" />
           </div>
 
           <div id="sidebar-small" class="inner">
