--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
               {% for posts in category %}
                 {% for post in posts reversed %}
                   <div style="margin-left:10px">
-                    <a href="{{ post.url | prepend: site.github.url }}">{{ post.title }}</a>
+                    <a href="{{ post.url }}">{{ post.title }}</a>
                   </div>
                 {% endfor %}
               {% endfor %}
@@ -54,7 +54,7 @@
     <div id="sidebar" class="inner">
       {% for post in site.posts %}
         <div>
-          <a href="{{ post.url | prepend: site.github.url }}">{{ post.title }}</a>
+          <a href="{{ post.url }}">{{ post.title }}</a>
         </div>
       {% endfor %}
     </div>
