--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Docs : Documentation, Onboarding, and Training">
 
     <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/stylesheet.css">
+    <link rel="icon" type="image/x-icon" href="/images/whiskey.ico">
     <script type="text/javascript">
       function showHideElement(id) {
         var nav = document.getElementById(id);
