trying a new banner

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -293,7 +293,7 @@ Full-Width Styles
 }
 
 #header_wrap {
-  background-image: url('../images/panther.jpg');
+  background-image: url('../images/banner.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center top;
