--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Docs : Documentation, Onboarding, and Training">
+    <meta name="description" content="Adventures of a unix hacker trapped in a data scientist's body">
 
     <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/stylesheet.css">
     <link rel="icon" type="image/x-icon" href="/images/whiskey.ico">
