--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,9 +62,17 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">nmcginn.com © {{ site.time | date: '%Y' }} All rights reserverd.</a></p>
+        <p class="copyright">nmcginn.com © {{ site.time | date: '%Y' }} All rights reserverd.</p>
       </footer>
     </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+      ga('create', 'UA-55171430-2', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
