--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/odstderek/odstderek">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/nmcginn/blog">View on GitHub</a>
 
           <h1 id="project_title">nmcginn.com</h1>
           <h2 id="project_tagline">clever tagline here</h2>
