--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,14 @@
     <script type="text/javascript">
       function showHideElement(id) {
         var nav = document.getElementById(id);
+        var main = document.getElementById('main-wrap');
         if (nav.style.display !== 'none' && nav.style.display !== '') {
           nav.style.display = 'none';
+          main.style.width = '100%';
         } else {
           nav.style.display = 'block';
+          nav.style.width = '25%';
+          main.style.width = '75%';
         }
       }
     </script>
@@ -24,47 +28,50 @@
 
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/nmcginn/blog">View on GitHub</a>
-
-          <h1 id="project_title">nmcginn.com</h1>
-          <h2 id="project_tagline">clever tagline here</h2>
-
-          <div class="small-device-nav" onclick="showHideElement('sidebar-small')">
-            <img src = "/images/hamburger.png" />
-          </div>
-
-          <div id="sidebar-small" class="inner">
-            {% for category in site.categories reversed %}
-            <div style="color:white;font-weight:700">{{category | first}}</div>
-              {% for posts in category %}
-                {% for post in posts reversed %}
-                  <div style="margin-left:10px">
-                    <a href="{{ post.url }}">{{ post.title }}</a>
-                  </div>
-                {% endfor %}
-              {% endfor %}
-            {% endfor %}
-          </div>
-
-        </header>
+    <div id="sidebar-small">
+      {% for category in site.categories reversed %}
+      <div style="color:white;font-weight:700">{{category | first}}</div>
+        {% for posts in category %}
+          {% for post in posts reversed %}
+            <div style="margin-left:10px">
+              <a href="{{ post.url }}">{{ post.title }}</a>
+            </div>
+          {% endfor %}
+        {% endfor %}
+      {% endfor %}
     </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-        <section id="main_content" class="inner">
-          <span style="position:absolute;right:0;top:0">{{ page.date | date: '%B %d, %Y' }}</span>
-          {{content}}
-        </section>
-    </div> 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">nmcginn.com © {{ site.time | date: '%Y' }} All rights reserverd.</p>
-      </footer>
+    <div class="main-wrap" id="main-wrap">
+      <!-- HEADER -->
+      <div id="header_wrap" class="outer">
+          <header class="inner">
+
+            <h1 id="project_title">nmcginn.com</h1>
+            <h2 id="project_tagline">clever tagline here</h2>
+
+            <div class="small-device-nav" onclick="showHideElement('sidebar-small')">
+              <img src = "/images/hamburger.png" />
+            </div>
+
+          </header>
+      </div>
+
+      <!-- MAIN CONTENT -->
+      <div id="main_content_wrap" class="outer">
+          <section id="main_content" class="inner">
+            <span style="position:absolute;right:0;top:0">{{ page.date | date: '%B %d, %Y' }}</span>
+            {{content}}
+          </section>
+      </div> 
+      <!-- FOOTER  -->
+      <div id="footer_wrap" class="outer">
+        <footer class="inner">
+          <p><a href="https://github.com/nmcginn/blog">Find me on GitHub</a></p>
+          <p class="copyright">nmcginn.com © {{ site.time | date: '%Y' }} All rights reserverd.</p>
+        </footer>
+      </div>
     </div>
+
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
