--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,10 +6,11 @@
     <ul>
         <li class="nav-home {% if page.current == 'home' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}">Home</a></li>
         <li class="nav-about {% if page.current == 'about' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}about">About</a></li>
-        <li class="nav-fables {% if page.url contains 'fables' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/fables">Fables</a></li>
-        <li class="nav-speeches {% if page.url contains 'speeches' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/speeches">Speeches</a></li>
-        <li class="nav-fiction {% if page.url contains 'fiction' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/fiction">Fiction</a></li>
-        <li class="nav-author {% if page.current == 'author' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}author/casper">Author</a></li>
+        <li class="nav-2017 {% if page.url contains '2017' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/2017">2017</a></li>
+        <li class="nav-2016 {% if page.url contains '2016' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/2016">2016</a></li>
+        <li class="nav-2015 {% if page.url contains '2015' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/2015">2015</a></li>
+        <li class="nav-2014 {% if page.url contains '2014' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/2014">2014</a></li>
+        <li class="nav-author {% if page.current == 'author' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}author/Nathan">Author</a></li>
     </ul>
     <a class="subscribe-button icon-feed" href="{{ site.baseurl }}feed.xml">Subscribe</a>
 </div>
