--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Author
-cover: 'assets/images/cover4.jpg'
+cover: 'assets/images/banner.png'
 class: 'author-template'
 navigation: True
 label: Author
