--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,11 +5,11 @@
     </a>
     <ul>
         <li class="nav-home {% if page.current == 'home' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}">Home</a></li>
-        <li class="nav-about {% if page.current == 'about' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}about">About</a></li>
         <!--<li class="nav-2017 {% if page.url contains '2017' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/2017">2017</a></li>
         <li class="nav-2016 {% if page.url contains '2016' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/2016">2016</a></li>
         <li class="nav-2015 {% if page.url contains '2015' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/2015">2015</a></li>
         <li class="nav-2014 {% if page.url contains '2014' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/2014">2014</a></li>-->
+        <li class="nav-author {% if page.current == 'author' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}author/Nathan">About</a></li>
     </ul>
     <a class="subscribe-button icon-feed" href="{{ site.baseurl }}feed.xml">Subscribe</a>
 </div>
