--- a/scripts/template.mustache
+++ b/scripts/template.mustache
@@ -11,6 +11,12 @@
         img {
             max-width: 95%;
         }
+        @media screen and (prefers-color-scheme: dark) {
+            :root {
+                background-color: #232323;
+                color: #D0D0D0;
+            }
+        }
     </style>
 </head>
 <body>
