better mobile scrolling

--- a/scripts/template.mustache
+++ b/scripts/template.mustache
@@ -16,6 +16,9 @@
                 background-color: #232323;
                 color: #d0d0d0;
             }
+            pre {
+                overflow-x: scroll;
+            }
             a:link, a:hover {
                 color: #6495ed;
             }
